--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="/About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Contact Me">Contact Me</a>
+              <a class="nav-link" href="/Contact">Contact Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/Documentation">Documentation</a>
