--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
+        <a class="navbar-brand" href="/">Fusion Filter</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,18 +38,37 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          <div class="d-flex" role="search">
+            <button class="btn btn-outline-success mx-2" type="submit">Login</button>
+            <button class="btn btn-outline-success mx-2" type="submit">Sign Up</button>
+          </div>
         </div>
       </div>
     </nav>
-    <h1>Fusion Filter -Try out some amazing filters!</h1>
+    <div class="container my-4">
+      <h1 class = "fs-2 text">Fusion Filter -Try out some amazing filters!</h1>
+
+      <form action="/edit" method = "POST" enctype="multipart/form-data">
+
+        <div class="mb-3">
+          <label for="formFile" class="form-label">Select an image</label>
+          <input class="form-control" type="file" name ="file" id="formFile">
+        </div>
+        <div class="mb-3">
+          <select name="operation" class="form-select" aria-label="Default select example">
+            <option selected>Pick your filter</option>
+            <option value="1">Sketchify - Make a sketch </option>
+            <option value="2">Cartoonify - Let's enter the Cartoon world!</option>
+            <option value="3">DeOldify - Bring in some colours</option>
+          </select>
+          <button type="submit" class="btn btn-success">Submit</button>
+
+        </div>
+      </form>
+
+      
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
